--- a/HexView.Wpf/Themes/Generic.xaml
+++ b/HexView.Wpf/Themes/Generic.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:HexView.Wpf"
-    xmlns:collections="clr-namespace:System.Collections;assembly=System.Runtime.Extensions"
+    xmlns:collections="clr-namespace:System.Collections;assembly=mscorlib"
     xmlns:converters="clr-namespace:HexView.Wpf.Converters"
     xmlns:system="clr-namespace:System;assembly=System.Memory" >
     
