[优化]取消自动焦点，更改为鼠标点击焦点

--- a/HexView.Wpf/Themes/Generic.xaml
+++ b/HexView.Wpf/Themes/Generic.xaml
@@ -19,7 +19,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="local:HexViewer">
-                    <Grid FocusManager.FocusedElement="{Binding RelativeSource={RelativeSource TemplatedParent}}">
+                    <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="Auto"/>
